Fix [General] Wrong calculation of visible chips

--- a/src/elements/SectionTable/SectionTable.scss
+++ b/src/elements/SectionTable/SectionTable.scss
@@ -87,7 +87,10 @@
 
       .tooltip-wrapper {
         min-width: 8px;
-        margin-right: 5px;
+      }
+
+      .tip-container {
+        margin-left: 5px;
       }
 
       &.name-wrapper {
